--- a/day04 텍스트 관련 태그_02/index.html
+++ b/day04 텍스트 관련 태그_02/index.html
@@ -16,6 +16,22 @@
             <b>글자를 굵게 표현하고 싶을 떄</b>
         </p>
 
-        <p></p>
+        <p>
+            <em>주위 텍스트에 비해서 강조된 부분이나 저자의 생각</em><br />
+            <i>이탤릭체를 표현하고 싶을 때</i>
+        </p>
+
+        <q
+            >인용할 문구를 표현, 따옴표가 나옴! 글자와 같이 나열되어지며 짧은
+            본문의 인용을 표현할 때 사용</q
+        >
+
+        <p>
+            <mark>중요한 부분을 강조할 때~ 사용</mark>
+        </p>
+
+        <p>
+            <span>꾸밀 때 사용</span>
+        </p>
     </body>
 </html>
